crates/xlate/tests/snapshots/golden_matrix__cacheacct_write__gpt-4o-mini__20260912__chat_to_responses__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "instructions": "You are a compliance assistant operating under the following standing policy. Apply it to every answer. Clause 001 (retention). The reviewing analyst records every determination made under this clause, states the retention basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 002 (redaction). The reviewing analyst reviews every determination made under this clause, states the redaction basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 003 (escalation). The reviewing analyst documents every determination made under this clause, states the escalation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 004 (attribution). The reviewing analyst verifies every determination made under this clause, states the attribution basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 005 (provenance). The reviewing analyst annotates every determination made under this clause, states the provenance basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 006 (consent). The reviewing analyst summarises every determination made under this clause, states the consent basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 007 (minimisation). The reviewing analyst cross-checks every determination made under this clause, states the minimisation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 008 (portability). The reviewing analyst timestamps every determination made under this clause, states the portability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 009 (rectification). The reviewing analyst countersigns every determination made under this clause, states the rectification basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 010 (erasure). The reviewing analyst archives every determination made under this clause, states the erasure basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 011 (accuracy). The reviewing analyst records every determination made under this clause, states the accuracy basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 012 (integrity). The reviewing analyst reviews every determination made under this clause, states the integrity basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 013 (availability). The reviewing analyst documents every determination made under this clause, states the availability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 014 (confidentiality). The reviewing analyst verifies every determination made under this clause, states the confidentiality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 015 (accountability). The reviewing analyst annotates every determination made under this clause, states the accountability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 016 (proportionality). The reviewing analyst summarises every determination made under this clause, states the proportionality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 017 (retention). The reviewing analyst cross-checks every determination made under this clause, states the retention basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 018 (redaction). The reviewing analyst timestamps every determination made under this clause, states the redaction basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 019 (escalation). The reviewing analyst countersigns every determination made under this clause, states the escalation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 020 (attribution). The reviewing analyst archives every determination made under this clause, states the attribution basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 021 (provenance). The reviewing analyst records every determination made under this clause, states the provenance basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 022 (consent). The reviewing analyst reviews every determination made under this clause, states the consent basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 023 (minimisation). The reviewing analyst documents every determination made under this clause, states the minimisation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 024 (portability). The reviewing analyst verifies every determination made under this clause, states the portability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 025 (rectification). The reviewing analyst annotates every determination made under this clause, states the rectification basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 026 (erasure). The reviewing analyst summarises every determination made under this clause, states the erasure basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 027 (accuracy). The reviewing analyst cross-checks every determination made under this clause, states the accuracy basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 028 (integrity). The reviewing analyst timestamps every determination made under this clause, states the integrity basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 029 (availability). The reviewing analyst countersigns every determination made under this clause, states the availability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 030 (confidentiality). The reviewing analyst archives every determination made under this clause, states the confidentiality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 031 (accountability). The reviewing analyst records every determination made under this clause, states the accountability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 032 (proportionality). The reviewing analyst reviews every determination made under this clause, states the proportionality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 033 (retention). The reviewing analyst documents every determination made under this clause, states the retention basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 034 (redaction). The reviewing analyst verifies every determination made under this clause, states the redaction basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 035 (escalation). The reviewing analyst annotates every determination made under this clause, states the escalation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 036 (attribution). The reviewing analyst summarises every determination made under this clause, states the attribution basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 037 (provenance). The reviewing analyst cross-checks every determination made under this clause, states the provenance basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 038 (consent). The reviewing analyst timestamps every determination made under this clause, states the consent basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 039 (minimisation). The reviewing analyst countersigns every determination made under this clause, states the minimisation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 040 (portability). The reviewing analyst archives every determination made under this clause, states the portability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 041 (rectification). The reviewing analyst records every determination made under this clause, states the rectification basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 042 (erasure). The reviewing analyst reviews every determination made under this clause, states the erasure basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 043 (accuracy). The reviewing analyst documents every determination made under this clause, states the accuracy basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 044 (integrity). The reviewing analyst verifies every determination made under this clause, states the integrity basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 045 (availability). The reviewing analyst annotates every determination made under this clause, states the availability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 046 (confidentiality). The reviewing analyst summarises every determination made under this clause, states the confidentiality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 047 (accountability). The reviewing analyst cross-checks every determination made under this clause, states the accountability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 048 (proportionality). The reviewing analyst timestamps every determination made under this clause, states the proportionality basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 049 (retention). The reviewing analyst countersigns every determination made under this clause, states the retention basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 050 (redaction). The reviewing analyst archives every determination made under this clause, states the redaction basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 051 (escalation). The reviewing analyst records every determination made under this clause, states the escalation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 052 (attribution). The reviewing analyst reviews every determination made under this clause, states the attribution basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 053 (provenance). The reviewing analyst documents every determination made under this clause, states the provenance basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 054 (consent). The reviewing analyst verifies every determination made under this clause, states the consent basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 055 (minimisation). The reviewing analyst annotates every determination made under this clause, states the minimisation basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 056 (portability). The reviewing analyst summarises every determination made under this clause, states the portability basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 057 (rectification). The reviewing analyst cross-checks every determination made under this clause, states the rectification basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 058 (erasure). The reviewing analyst timestamps every determination made under this clause, states the erasure basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 059 (accuracy). The reviewing analyst countersigns every determination made under this clause, states the accuracy basis relied upon, and files the result in the register before the close of the working day on which the determination was made. Clause 060 (integrity). The reviewing analyst archives every determination made under this clause, states the integrity basis relied upon, and files the result in the register before the close of the working day on which the determination was made.",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "Reply with the single word: ok."
        }
      ]
    }
  ],
  "max_output_tokens": 32,
  "prompt_cache_key": "llm-xlate-e2e-cache-accounting"
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
